minor reformatting, imprve error handling and docs